# supermonad

./: .gitignore  .hlint.hs  .travis.yml  BRANCHES.md  LICENSE  Makefile  README.md  changelog.md  compile-all.sh  supermonad-plugin.cabal  supermonad.cabal
examples/applicative/bankers/: Main.hs  MainMinimalBug.hs  bankers.cabal
examples/applicative/ll1-parser/: Main.hs  MainSuperapplicative.hs  ll1-parser-example.cabal  ll1-parser.cabal
examples/arrow/counter-indexed/: Main.hs  counter-indexed.cabal
examples/arrow/ebba/: EbbaSuperarrow.hs  ebba-example.cabal
examples/arrow/reversible-indexed/: Main.hs  reversible-indexed.cabal
examples/constrained/: MainSet.hs  constrained-example.cabal
examples/ebba/: .gitignore  Ebba.hs  EbbaSuperarrow.hs  Makefile
examples/effect/: .gitignore  Main.hs  Main2.hs  Main3.hs  MainSupermonad.hs  MainSupermonad2.hs  MainSupermonad3.hs  effect-example.cabal
examples/hmtc/monad-param/: AST.hs  PPMTIR.hs  Scanner.hs  SrcPos.hs  TAMCode.hs  TypeChecker.hs  hmtc-monad-param.cabal
examples/hmtc/monad-param/MTTests/: test3.mt
examples/hmtc/original/: CodeGenMonad.hs  MTStdEnv.hs  Main.hs  Token.hs  Type.hs  TypeChecker.hs  hmtc-orig.cabal
examples/hmtc/original/MTTests/: matmult.mt
examples/hmtc/supermonad/: CodeGenMonad.hs  CodeGenerator.hs  Diagnostics.hs  Env.hs  MTIR.hs  MTStdEnv.hs  Main.hs  Makefile  Name.hs  PPTAMCode.hs  PPUtilities.hs  ParseMonad.hs  Scanner.hs  ScopeLevel.hs  SrcPos.hs  Symbol.hs  TAMCode.hs  TAMInterpreter.hs  Token.hs  TypeChecker.hs  hmtc-supermonad.cabal
examples/hmtc/supermonad/MTTests/: incdec.mt  sort.mt  test6.mt
examples/hmtc/test-files/: fac.mt  records.mt  test1.mt  test2.mt  test5.mt
examples/minimal/: MinimalMain.hs  minimal.cabal
examples/monad/constrained/: MainSet.hs  constrained-example.cabal
examples/monad/effect/: Main2.hs  Main3.hs  MainSupermonad.hs  MainSupermonad2.hs  MainSupermonad3.hs  Vector.hs  effect-example.cabal
examples/monad/hmtc/monad-param/: Diagnostics.hs  LibMT.hs  Name.hs  PPAST.hs  TAMInterpreter.hs  hmtc-monad-param.cabal
examples/monad/hmtc/original/: Diagnostics.hs  PPUtilities.hs  ParseMonad.hs  Parser.y  TAMCodeParser.y  hmtc-orig.cabal
examples/monad/hmtc/supermonad/: AST.hs  CodeGenMonad.hs  CodeGenerator.hs  Diagnostics.hs  Env.hs  LibMT.hs  MTIR.hs  Makefile  PPAST.hs  PPMTIR.hs  TestTAM.hs  Type.hs  hmtc-supermonad.cabal
examples/monad/hmtc/test-files/: overloading.mt  test4.mt
examples/monad/minimal/: MinimalMain.hs  minimal.cabal
examples/monad/session/: MainSupermonad.hs  MainSupermonadTrans.hs  session-example.cabal
examples/monad/session-chat/original/: Client.hs  Types.hs  session-chat-orig-example.cabal
examples/monad/session-chat/supermonad/: Main.hs  Server.hs  Types.hs  session-chat-supermonad-example.cabal
examples/reversible-arrows/: Main.hs  reversible-arrows.cabal
examples/session/: Main.hs  MainSupermonad.hs  MainSupermonadTrans.hs  session-example.cabal
examples/session-chat/original/: Client.hs  Main.hs  Server.hs  Types.hs  Utility.hs  session-chat-orig-example.cabal
examples/session-chat/supermonad/: Client.hs  Types.hs  Utility.hs  session-chat-supermonad-example.cabal
examples/session-chat/supermonad-trans/: session-chat-supermonad-trans-example.cabal
examples/test/missing-functions/: Main.hs  missing-functions.cabal
hcar/: Supermonads-JS.tex  entry.tex  supermonads.tex
src/Control/: Superarrow.hs  Supermonad.hs
src/Control/Super/: Arrow.hs  Monad.hs
src/Control/Super/Arrow/: Constrained.hs  Plugin.hs  Prelude.hs
src/Control/Super/Monad/: Alternative.hs  Constrained.hs  Functions.hs  MonadPlus.hs  Plugin.hs  Prelude.hs  PreludeWithoutMonad.hs
src/Control/Super/Monad/Constrained/: Alternative.hs  Functions.hs  Functor.hs  MonadPlus.hs  Prelude.hs
src/Control/Super/Plugin/: ClassDict.hs  Constraint.hs  Debug.hs  Detect.hs  Environment.hs  Evidence.hs  Instance.hs  InstanceDict.hs  Log.hs  Names.hs  Prototype.hs  Separation.hs  Solving.hs  Utils.hs  Wrapper.hs
src/Control/Super/Plugin/Collection/: Map.hs  Set.hs
src/Control/Super/Plugin/Environment/: Lift.hs
src/Control/Superarrow/: Constrained.hs  Plugin.hs
src/Control/Supermonad/: Applicative.hs  Constrained.hs  Functions.hs  Plugin.hs  Prelude.hs  PreludeWithoutMonad.hs
src/Control/Supermonad/Constrained/: Functions.hs  Functor.hs  Prelude.hs
src/Control/Supermonad/Plugin/: ClassDict.hs  Constraint.hs  Debug.hs  Detect.hs  Dict.hs  Environment.hs  Evidence.hs  Instance.hs  InstanceDict.hs  Log.hs  Names.hs  Separation.hs  Solving.hs  SupermonadDict.hs  Utils.hs  Wrapper.hs
src/Control/Supermonad/Plugin/Environment/: Lift.hs
tests/: Main.hs
tests/Test/: Utils.hs
tests/Test/Control/Super/Plugin/Collection/: Map.hs  Set.hs
