name:                supermonad-plugin
version:             0.1
synopsis:            Plugin and base library to support super monads in Haskell
category:            Type System, Plugin, Monad
description:         Plugin and base library to support super monads in Haskell
license:             BSD3
license-file:        LICENSE
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
bug-reports:         https://github.com/jbracker/supermonad-plugin/issues
stability:           experimental
copyright:           Copyright (c) 2016, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10
description:

    The @supermonad-plugin@ library adds support for super monads to GHC
    using typechecker plugins. Plugins are available from GHC 7.10 onwards.
    The base library containing the Haskell representation of super monads
    is also given by this package.

source-repository head
  type:     git
  location: https://github.com/jbracker/supermonad-plugin.git

library
  exposed-modules: Control.Supermonad
                 , Control.Supermonad.Plugin
                 , Control.Supermonad.Plugin.Utils
                 , Control.Supermonad.Plugin.Log
                 , Control.Supermonad.Plugin.Detect
                 , Control.Supermonad.Plugin.Debug
                 , Control.Supermonad.Plugin.Constraint
                 , Control.Supermonad.Plugin.Environment
  other-modules:
  other-extensions:
  build-depends:  base         >=4.8 && <5,
                  safe         >=0.3 && <0.4,
                  ghc          >=7.9 && <7.12,
                  containers   >=0.5 && <0.6,
                  transformers >=0.4 && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
