name:                supermonad
version:             0.1
synopsis:            Plugin and base library to support supermonads in Haskell
category:            Type System, Plugin, Monad
license:             BSD3
license-file:        LICENSE
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
bug-reports:         https://github.com/jbracker/supermonad/issues
stability:           experimental
copyright:           Copyright (c) 2016, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1
extra-source-files: README.md
                  , Makefile
                  , compile-all.sh
                  , examples/constrained/constrained-example.cabal
                  , examples/constrained/*.hs
                  , examples/effect/effect-example.cabal
                  , examples/effect/*.hs
                  , examples/session/session-example.cabal
                  , examples/session/*.hs
                  , examples/session-chat/original/session-chat-orig-example.cabal
                  , examples/session-chat/original/*.hs
                  , examples/session-chat/supermonad/session-chat-supermonad-example.cabal
                  , examples/session-chat/supermonad/*.hs
                  , examples/hmtc/monad-param/hmtc-monad-param.cabal
                  , examples/hmtc/monad-param/Makefile
                  , examples/hmtc/monad-param/*.y
                  , examples/hmtc/monad-param/*.hs
                  , examples/hmtc/original/hmtc-orig.cabal
                  , examples/hmtc/original/Makefile
                  , examples/hmtc/original/*.y
                  , examples/hmtc/original/*.hs
                  , examples/hmtc/supermonad/hmtc-supermonad.cabal
                  , examples/hmtc/supermonad/Makefile
                  , examples/hmtc/supermonad/*.y
                  , examples/hmtc/supermonad/*.hs
                  , examples/hmtc/test-files/*.mt
description:

    The @supermonad@ library adds support for supermonads to GHC
    using a type checker plugin. Plugins are available from GHC 7.10 onwards.
    The base library containing the Haskell representation of super monads
    is also given by this package.
    
    Additional information can be found in the <https://github.com/jbracker/supermonad README>.

source-repository head
  type:     git
  location: https://github.com/jbracker/supermonad.git

library
  exposed-modules: Control.Supermonad
                 , Control.Supermonad.Prelude
                 , Control.Supermonad.Functions
                 , Control.Supermonad.Plugin
                 , Control.Supermonad.PreludeWithoutMonad
                 , Control.Supermonad.Constrained
                 , Control.Supermonad.Constrained.Functor
                 , Control.Supermonad.Constrained.Prelude
                 , Control.Supermonad.Constrained.Functions
  other-modules: Control.Supermonad.Plugin.Utils
               , Control.Supermonad.Plugin.Wrapper
               , Control.Supermonad.Plugin.Log
               , Control.Supermonad.Plugin.Detect
               , Control.Supermonad.Plugin.Debug
               , Control.Supermonad.Plugin.Constraint
               , Control.Supermonad.Plugin.Instance
               , Control.Supermonad.Plugin.Evidence
               , Control.Supermonad.Plugin.Environment
               , Control.Supermonad.Plugin.Environment.Lift
               , Control.Supermonad.Plugin.Separation
               , Control.Supermonad.Plugin.Solving
  other-extensions:
  build-depends: base         >=4.8  && <5
               , ghc          >=7.10.1 && <8.1
               -- ^ We require version 7.10.1+, because we use the cpp macro:
               --   MIN_VERSION_GLASGOW_HASKELL(x,y,z,z')
               --   http://downloads.haskell.org/~ghc/8.0.1/docs/html/users_guide/phases.html#standard-cpp-macros
               , containers   >=0.5  && <0.6
               , mtl          >=2.2  && <3
               , transformers >=0.4  && <0.6
               -- ^ Should match mtl dependency
               , fgl >= 5.5 && <6.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic 
  -- Enable if things go wrong magically: -dcore-lint
