name:                effect-example
version:             0.1
synopsis:            Example
category:
description:         Example
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2015, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable effect-example
  build-depends:  base            >= 4.8,
                  effect-monad    == 0.7,
                  type-level-sets == 0.5
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
                       -fno-warn-unused-binds -fno-warn-unused-matches
                       -fno-warn-name-shadowing

executable effect-example-pm
  build-depends:  base              >= 4.8,
                  effect-monad      == 0.7,
                  type-level-sets   == 0.5,
                  supermonad        == 0.1
  main-is:             MainSupermonad.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint -fno-opt-coercion

executable effect-example2
  build-depends:  base            >= 4.8,
                  effect-monad    == 0.7,
                  type-level-sets == 0.5
  main-is:             Main2.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
                       -fno-warn-unused-binds -fno-warn-unused-matches
                       -fno-warn-name-shadowing

executable effect-example2-pm 
  build-depends:  base              >= 4.8,
                  effect-monad      == 0.7,
                  type-level-sets   == 0.5,
                  supermonad        == 0.1
  main-is:             MainSupermonad2.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint -fno-opt-coercion
  -- -dcore-lint

executable effect-example3
  build-depends:  base            >= 4.8,
                  effect-monad    == 0.7,
                  type-level-sets == 0.5
  main-is:             Main3.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
                       -fno-warn-unused-binds -fno-warn-unused-matches
                       -fno-warn-name-shadowing

executable effect-example3-pm
  build-depends:  base              >= 4.8,
                  effect-monad      == 0.7,
                  type-level-sets   == 0.5,
                  supermonad        == 0.1
  main-is:             MainSupermonad3.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint -fno-opt-coercion
