name:                session-example
version:             0.1
synopsis:            Example
category:
description:         Example
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2015, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable session-example
  build-depends:  base            >= 4.8,
                  indexed         == 0.1,
                  simple-sessions == 0.1.3
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dcore-lint

executable session-example-pm
  build-depends:  base              >= 4.8,
                  indexed           == 0.1,
                  simple-sessions   == 0.1.3,
                  supermonad-plugin == 0.1
  main-is:             MainSupermonad.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
