name:                counter-indexed
version:             0.1
synopsis:            Example
category:
description:         Example
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2016, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable reversible-indexed
  build-depends: base       >=4.8
               , supermonad == 0.2
  main-is:             Main.hs
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -dynamic -dcore-lint
