name:                session-chat-orig-example
version:             0.1
synopsis:            Example
category:
description:         Example
author:              Jan Bracker <jan.bracker@googlemail.com>
maintainer:          Jan Bracker <jan.bracker@googlemail.com>
stability:           experimental
copyright:           Copyright (c) 2016, Jan Bracker
build-type:          Simple
cabal-version:       >=1.10

executable session-chat-orig
  build-depends: base            >= 4.8
               , indexed         == 0.1
               , stm             >= 2.4
               , simple-sessions == 0.1.3
  main-is: Main.hs
  hs-source-dirs:      .
  other-modules: Server
               , Client
               , Types
               , Utility
  default-language: Haskell2010
  ghc-options: -Wall -dcore-lint
               -fno-warn-name-shadowing